modificacion de permisos,panel para super admin, auth mejorado y restringcion de funciones